Initial effort to migrate to Java 10